[project]
name = "bento-meta"
version = "0.2.16"
description = "Python drivers for Bento Metamodel Database"
authors = [
  { name="Mark A. Jensen", email = "mark.jensen@nih.gov"},
  { name="Mark Benson", email = "mark.benson@nih.gov"},
  { name="Nelson Moore", email = "nelson.moore@essential-soft.com"}
]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]

[project.urls]
"Homepage" = "https://cbiit.github.io/bento-meta/"
"Bug Tracker" = "https://github.com/CBIIT/bento-meta/issues"

[tool.poetry]
name = "bento-meta"
version = "0.2.16"
description = "Python drivers for Bento Metamodel Database"
authors = [
    "Mark A. Jensen <mark.jensen@nih.gov>",
    "Mark Benson <mark.benson@nih.gov>",
    "Nelson Moore <nelson.moore@essential-soft.com>"
]
license = "Apache 2.0"
readme = "README.md"
include = ["logs/log.ini"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = ">=6.0.1"
delfick-project = "^0.7.9"
neo4j = ">=4.0"
nanoid = "^2.0.0"
requests = "^2.32.3"
tqdm = "^4.64.1"
setuptools = "^80.9.0"
numpy = {version = "^1.23.5", optional = true}
pandas = {version = "^1.5.2", optional = true}
spacy = {version = "^3.4.3", optional = true}
click = {version = "^8.1.3", optional = true}
liquichange = "^0.2.1"
tornado = "^6.5.1"
cryptography = "^45.0.3"
certifi = "^2025.4.26"

[tool.poetry.extras]
Tools = ["click", "numpy", "pandas", "spacy", "liquichange"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-docker = "^3.1.1"
requests = "^2.28.1"
sphinx = "^8.1.3"
myst-nb = {version = "^1.0.0", python = "^3.10"}
sphinx-autoapi = "^3.4.0"
sphinx-rtd-theme = "^3.0.2"
python-semantic-release = "^7.33.0"
pytest-cov = "^4.0.0"
liquichange = "^0.2.1"


[tool.poetry.scripts]
"compare_models" = { reference = "scripts/compare_models.py", type = "file", extras = ["click", "spacy", "pandas"]}
"compare_val_set_terms" = { reference = "scripts/compare_val_set_terms.py", type = "file", extras = ["click", "pandas"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "master"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true
major_on_zero = false
version_source = "tag"
