[project]
name = "bento-meta"
version = "0.3.1"
description = "Python drivers for Bento Metamodel Database"
authors = [
  { name="Mark A. Jensen", email = "mark.jensen@nih.gov"},
  { name="Mark Benson", email = "mark.benson@nih.gov"},
  { name="Nelson Moore", email = "nelson.moore@essential-soft.com"}
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache 2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]

dependencies = [
    "PyYAML>=6.0.1",
    "delfick-project>=0.7.9,<0.8.0",
    "neo4j>=4.0",
    "nanoid>=2.0.0,<3.0.0",
    "requests>=2.32.4,<3.0.0",
    "tqdm>=4.64.1,<5.0.0",
    "setuptools>=80.9.0,<81.0.0",
    "liquichange>=0.2.1,<0.3.0",
    "tornado>=6.5.1,<7.0.0",
    "cryptography>=45.0.3,<46.0.0",
    "certifi>=2025.4.26",
    "urllib3>=2.5.0,<3.0.0",
    "minicypher>=0.1.3,<0.2.0",
    "hatchling>=1.28.0",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0,<8.0.0",
    "pytest-docker>=3.1.1,<4.0.0",
    "requests>=2.28.1,<3.0.0",
    "sphinx>=8.1.3,<9.0.0",
    "myst-nb>=1.0.0,<2.0.0",
    "sphinx-autoapi>=3.4.0,<4.0.0",
    "sphinx-rtd-theme>=3.0.2,<4.0.0",
    "python-semantic-release>=7.33.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
]

[project.urls]
"Homepage" = "https://cbiit.github.io/bento-meta/"
"Bug Tracker" = "https://github.com/CBIIT/bento-meta/issues"

[project.scripts]
compare_models = "scripts.compare_models:main"
compare_val_set_terms = "scripts.compare_val_set_terms:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src", "logs/log.ini"]

[tool.hatch.build.targets.wheel]
packages = ["src/bento_meta"]
sources = ["src"]

[tool.pytest.ini_options]
addoptions = "-s -k 'local or (not cidc)'"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "master"
changelog_file = "CHANGELOG.md"
build_command = "uv build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true
major_on_zero = false
version_source = "tag"
