[metadata]
name = bento-meta
version = 0.0.34
author = Mark Jensen
author_email = mark.jensen@nih.gov
maintainer = Mark Jensen
maintainer_email = mark.jensen@nih.gov
description = Python drivers for Bento Metamodel Database
url = https://github.com/CBIIT/bento-meta
project_urls =
    Bug Tracker = https://github.com/CBIIT/bento-meta/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License

[options]
package_dir =
    = bento_meta
packages = find:
python_requires = >=3.8
install_requires =
    delfick-project
    neo4j >=4.0
    nanoid
    requests
tests_require =
    pytest
    docker-compose
    pytest-docker
    requests

[options.packages.find]
where = bento_meta
