[metadata]
name = bento-meta
version = 0.0.42
author = Mark Jensen
author_email = mark.jensen@nih.gov
maintainer = Mark Jensen
maintainer_email = mark.jensen@nih.gov
description = Python drivers for Bento Metamodel Database
url = https://github.com/CBIIT/bento-meta
project_urls =
    Bug Tracker = https://github.com/CBIIT/bento-meta/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License

[options]
packages = find:
python_requires = >=3.8
scripts =
    scripts/clean_cda_map_excel.py
    scripts/link_synonym_ents_csv.py
install_requires =
    delfick-project
    neo4j >=4.0
    nanoid
    requests
    tqdm
tests_require =
    pytest
    docker-compose
    pytest-docker
    requests
build_requires =
    build >=0.7.0

[options.extras_require]
bin =
    numpy
    pandas
    scispacy
    spacy

[options.packages.find]
    exclude = *Tools*

	    