[metadata]
name = bento-meta
version = 0.0.42
author = Mark Jensen
author_email = mark.jensen@nih.gov
maintainer = Mark Jensen
maintainer_email = mark.jensen@nih.gov
description = Python drivers for Bento Metamodel Database
url = https://github.com/CBIIT/bento-meta
project_urls =
    Bug Tracker = https://github.com/CBIIT/bento-meta/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License

[options]
packages = find:
python_requires = >=3.8
scripts =
    scripts/clean_cda_map_excel.py
    scripts/link_synonym_ents_csv.py
    scripts/compare_models.py
    scripts/compare_val_set_terms.py
install_requires =
    delfick-project
    neo4j >=4.0
    nanoid
    requests
    tqdm
tests_require =
    pytest
    docker-compose
    pytest-docker
    requests
build_requires =
    build >=0.7.0
#include_package_data = True

[options.package_data]
* = logs/log.ini

[options.extras_require]
bin =
    click
    numpy
    pandas
    spacy
    en_ner_bionlp13cg_md @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.1/en_ner_bionlp13cg_md-0.5.1.tar.gz

[options.packages.find]


	    